--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
         "lint": "eslint"
     },
     "dependencies": {
+        "@prisma/adapter-pg": "^7.2.0",
+        "@prisma/client": "^7.2.0",
+        "dotenv": "^17.2.3",
         "next": "16.0.3",
+        "pg": "^8.16.3",
         "react": "19.2.0",
         "react-dom": "19.2.0"
     },
     "devDependencies": {
         "@tailwindcss/postcss": "^4",
-        "@types/node": "^20",
+        "@types/node": "^20.19.27",
+        "@types/pg": "^8.16.0",
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "eslint": "^9",
@@ -23,7 +28,9 @@
         "prettier": "3.6.2",
         "prettier-plugin-prisma": "^5.0.0",
         "prettier-plugin-tailwindcss": "^0.7.1",
+        "prisma": "^7.2.0",
         "tailwindcss": "^4",
+        "tsx": "^4.21.0",
         "typescript": "^5"
     }
 }
