--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@types/pg": "^8.16.0",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "csv-parser": "^3.2.0",
         "eslint": "^9",
         "eslint-config-next": "16.0.3",
         "prettier": "3.6.2",
