--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@prisma/adapter-pg": "^7.2.0",
         "@prisma/client": "^7.2.0",
+        "better-auth": "^1.4.11",
         "dotenv": "^17.2.3",
         "lucide-react": "^0.562.0",
         "next": "16.0.3",
