--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "dotenv": "^17.2.3",
         "lucide-react": "^0.562.0",
         "multer": "^2.0.2",
-        "next": "16.0.3",
+        "next": "^16.1.3",
         "pg": "^8.16.3",
         "react": "19.2.0",
         "react-dom": "19.2.0",
@@ -34,7 +34,7 @@
         "prettier": "3.6.2",
         "prettier-plugin-prisma": "^5.0.0",
         "prettier-plugin-tailwindcss": "^0.7.1",
-        "prisma": "^7.2.0",
+        "prisma": "^6.19.2",
         "tailwindcss": "^4",
         "tsx": "^4.21.0",
         "typescript": "^5"
